# YakovenkoSA_home_work_10_1

./: README.md  main.py  pyproject.toml  test.xlsx
logs/: mylog.txt
src/: decorators.py  external_api.py  generators.py  logger.py  masks.py  processing.py  search_trans.py  utils.py  widget.py
tests/: conftest.py  test.xlsx  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
